mysite/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: mysite
          image: ghcr.io/peter-kaagman/mysite:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: db
              mountPath: /app/db
            - name: logs
              mountPath: /app/logs
            - name: images
              mountPath: /app/public/images
      securityContext:
        fsGroup: 1000
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: mysite-db-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: mysite-logs-pvc
        - name: images
          persistentVolumeClaim:
            claimName: mysite-images-pvc
