mysite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
spec:
  selector:
    app: mysite
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
