mysite/ingress-mysite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  namespace: mysite
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/server-snippet: |
      set $mysite_redirect 0;
      if ($host != "mysite.prjv.nl") {
        set $mysite_redirect 1;
      }
      if ($request_uri ~ "^/.well-known/acme-challenge/") {
        set $mysite_redirect 0;
      }
      if ($mysite_redirect = 1) {
        return 301 https://mysite.prjv.nl$request_uri;
      }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prjv.nl
        - mysite.prjv.nl
        - www.mysite.prjv.nl
        - www.prjv.nl
      secretName: mysite-tls
  rules:
    - host: prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 5000
    - host: mysite.prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 5000
    - host: www.mysite.prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 5000
    - host: www.prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 5000
